ckeditor: first setings

--- a/assets/content.scss
+++ b/assets/content.scss
@@ -3,5 +3,43 @@
 @import './sass/counter-skills';
 @import './sass/shortcodes/image_scroll_hover';
 
-// code highlight
-@import 'highlight.js/scss/atom-one-dark.scss';
+// editor & code highlight
+@import 'highlight.js/scss/agate.scss';
+
+
+figure.image {
+    @include border-radius($card-inner-border-radius);
+    width: 100% !important;
+}
+
+code.hljs {
+    scroll-behavior: auto;
+    max-height: 400px;
+    tab-size: 34px;
+    @include border-radius(0 0 $card-inner-border-radius $card-inner-border-radius);
+}
+
+figure.image {
+    overflow: hidden;
+}
+
+figcaption,
+.code-header {
+    text-align: center;
+    font-size: $form-text-font-size;
+    padding: $card-cap-padding-y $card-cap-padding-x;
+    color: $gray-550;
+    background-color: $card-cap-bg;
+}
+
+figcaption {
+    border: $card-border-width solid $card-border-color;
+    border-top: none;
+}
+
+.code-header {
+    font-size: $form-text-font-size * 0.9;
+    border: $card-border-width solid $card-border-color;
+    border-bottom: none;
+    @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
+}
