--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -79,10 +79,7 @@
 
                         <div class="form-widget">
 
-							{{ form_start(contactForm) }}
-							{{ form_widget(contactForm) }}
-							<button type="submit" class="primary">Send</button>
-							{{ form_end(contactForm) }}
+							{{ form(contactForm) }}
  
                             {#<div class="form-result"></div>
 
