--- a/templates/_layout/project.html.twig
+++ b/templates/_layout/project.html.twig
@@ -148,7 +148,7 @@
 							{# Project Info #}
 							<div class="col-md-8 portfolio-single-content">
 
-								<div class="fancy-title title-border"><h2>Project Info:</h2></div>
+								<div class="fancy-title title-border">Project Info:</div>
 								{% block page_content %}{% endblock %}
 
 							</div>
