--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -14,15 +14,36 @@
     </section>
 
     <section class="content-body">
-        This is your {{ user|higherRole }} dashboard.
 
-        <div class="row mt-4">
-            {% if cardApproveAuthors.authors|length > 0 and user|higherRole is same as('admin') %}
-                {% include "admin/_parts/card/authors_waiting_list.html.twig" with {
-                    data: cardApproveAuthors
-                } %}
-            {% endif %}
+        <div class="mb-5">
+            This is your {{ user|highestRole(true) }} dashboard.
         </div>
+
+        {# Cards #}
+        {% if cards is defined and cards|length > 0 %}
+            <div class="row g-3">
+                
+                {# Approve authors #}
+                {% if cards.approveAuthors is defined and cards.approveAuthors.authors|length > 0 %}
+                    {% include "admin/_parts/card/authors_waiting_list.html.twig" with {
+                        data: cards.approveAuthors
+                    } %}
+                {% endif %}
+
+                {# Purge files button #}
+                {% if cards.purgeFiles is defined %}
+                    {% include "admin/_parts/card/purge_files.html.twig" with {
+                        data: cards.purgeFiles
+                    } %}
+                {% endif %}
+
+                {# Approve comments #}
+                {# ... #}
+
+            </div>
+        {% else %}
+            <i>No card to display</i>
+        {% endif %}
 
     </section>
     
