--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,7 +71,7 @@
 
 {# Navigation ===================================================== #}
 
-            <header id="header" class="transparent-header{{ stickyClass }}{{ animationClass }}"{{ animationAttr }}>
+            <header id="header" class="transparent-header{{ stickyClass }}{{ animationClass }}"{{ animationAttr|raw }}>
                 <div id="header-wrap">
                     <div class="container">
                         <div class="header-row">
