--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -44,6 +44,9 @@
 {% endblock %}
 
 {% block content %}
+<pre><code class="lang-html">
+  &lt;h1&gt;This is a header&lt;/h1&gt;
+</code></pre>
 
 	{% if lesson.headline is not null %}
 		<div class="page_headline">
