Added gzip compression

--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -44,9 +44,9 @@
 {% endblock %}
 
 {% block content %}
-<pre><code class="lang-html">
-  &lt;h1&gt;This is a header&lt;/h1&gt;
-</code></pre>
+
+<h2>Hard coded in controller + twig (= string)</h2>
+<pre><code class="language-html">{{ code }}</code></pre>
 
 	{% if lesson.headline is not null %}
 		<div class="page_headline">
