--- a/templates/admin/_parts/card/purge_files.html.twig
+++ b/templates/admin/_parts/card/purge_files.html.twig
@@ -3,7 +3,7 @@
 {% block card_title %}Purge files{% endblock %}
 
 {% block card_text %}
-    <div>Remove all orphans files clicking simply this button. This action cannot be redo.</div>
+    <div>Remove orphaned files from storage with a single click. This action cannot be redo.</div>
 {% endblock %}
 
 {% block card_btn %}
