--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,5 @@
 {# Config #}
+{% apply spaceless %}
 
     {% set isHeaderSticky = false %}
     {% set headerAnimation = null %} {# eg. 'fadeInDown' or null to desactivate. Animations list: https://themes.semicolonweb.com/html/canvas/animations.html #}
@@ -145,3 +146,5 @@
 	{% endblock %}
 
 </html>
+
+{% endapply %}
