Widget accordion done

--- a/assets/js/admin/ckeditor_plugins/placeholder/placeholder.css
+++ b/assets/js/admin/ckeditor_plugins/placeholder/placeholder.css
@@ -1,11 +1,11 @@
-.placeholder {
-    background: #ffff00;
-    padding: 4px 2px;
-    outline-offset: -2px;
-    line-height: 1em;
-    margin: 0 1px;
+.cke-placeholder {
+    background: #ffff00 !important;
+    padding: 4px 2px !important;
+    outline-offset: -2px !important;
+    line-height: 1em !important;
+    margin: 0 1px !important;
 }
 
-.placeholder::selection {
-    display: none;
+.cke-placeholder::selection {
+    display: none !important;
 }
