--- a/assets/content.scss
+++ b/assets/content.scss
@@ -32,7 +32,8 @@ figure.image:hover {
  */
 
 figcaption,
-.code-header {
+.code-header,
+.resultbox-header {
     text-align: center;
     font-size: $form-text-font-size;
     padding: $card-cap-padding-y $card-cap-padding-x;
@@ -41,33 +42,43 @@ figcaption,
 }
 
 /**
- * Code
+ * Blocks margin
  */
 
-code.hljs {
+.code-container,
+.resultbox-container,
+.accordion {
+    margin-bottom: 40px;
+}
+
+/**
+ * Code block & Result box
+ */
+
+code.hljs,
+.resultbox-body {
     scroll-behavior: auto;
     max-height: 400px;
-    tab-size: 34px;
+    tab-size: 34px; // tabulation width
     @include border-radius(0 0 $card-inner-border-radius $card-inner-border-radius);
 }
-.code-header {
+.code-header,
+.resultbox-header {
     font-size: $form-text-font-size * 0.9;
     border: $card-border-width solid $card-border-color;
     border-bottom: none;
     @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
 }
-.code-result {
-    .code-header {
-        background-color: $blue-100;
-        color: $blue-400;
-        border: $card-border-width solid $blue-200;
-    }
-    *.hljs {
-        color: $body-color;
-        background-color: $body-bg;
-        border: $card-border-width solid $blue-200;
-        border-top: 0px;
-    }
+.resultbox-header {
+    background-color: $blue-100;
+    color: $blue-400;
+    border-color: $blue-200;
+}
+.resultbox-body {
+    padding: 1em;
+    font-size: $form-text-font-size;
+    border: $card-border-width solid $blue-200;
+    overflow-x: auto;
 }
 
 /**
