--- a/templates/_sections/posttype/post-navigation.html.twig
+++ b/templates/_sections/posttype/post-navigation.html.twig
@@ -32,7 +32,7 @@
 
 {# Post Navigation section ================================================= #}
 
-<div class="d-flex justify-content-between small post-navigation mb-5">
+<div class="d-flex justify-content-between small post-navigation my-5">
     {% if hasPrevLink %}
         <a href="{{ prevUrl }}">&lArr; {{ prevTitle }}</a>
     {% else %}
