--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
 {# Navigation ===================================================== #}
 
             <header id="header" class="transparent-header{{ stickyClass }}{{ animationClass }}"{{ animationAttr|raw }}>
-                <div id="header-wrap">
+                <div>
                     <div class="container">
                         <div class="header-row">
                             <a href="{{ path('home') }}">
@@ -87,7 +87,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="header-wrap-clone"></div>
             </header>
 
 {# View ===================================================== #}
