--- a/templates/lesson/index.html.twig
+++ b/templates/lesson/index.html.twig
@@ -21,10 +21,11 @@
 {% set collection_filters = [
     {
         collection: codingLanguagesFilter,
-        showAllLabel: 'All languages'
+        showAllLabel: 'All',
+        label: 'Language'
     }, {
         collection: categoriesFilter,
-        showAllLabel: 'All categories'
+        label: 'Category'
     }
 ] %}
 
