--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -19,10 +19,10 @@
     {label: 'Home', url: path('home')},
     {label: 'Portfolio', active: true}
 ] %}
-{% set collection_filters = {
+{% set collection_filters = [ {
     collection: categories,
     showAllLabel: 'All Categories'
-} %}
+} ] %}
 
 
 {# Collection of Projects =============================================== #}
