--- a/templates/_elements/projects-carousel.html.twig
+++ b/templates/_elements/projects-carousel.html.twig
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="portfolio-desc">
-                    <h3><a href="{{ projectUrl }}">{{ project.title }}</a></h3>
+                    <h3><a href="{{ projectUrl }}">{{ project.title|extract(40) }}</a></h3>
 
                     {% if showCategories %}
                         <span>
