--- a/templates/author/posts.html.twig
+++ b/templates/author/posts.html.twig
@@ -20,10 +20,10 @@
     {label: 'Blog', url: path('projects')},
     {label: author.fullname, active: true}
 ] %}
-{% set collection_filters = {
+{% set collection_filters = [ {
     collection: categories,
     showAllLabel: 'All Categories'
-}%}
+} ] %}
 
 
 {# Collection of Projects =============================================== #}
