--- a/templates/author/projects.html.twig
+++ b/templates/author/projects.html.twig
@@ -20,10 +20,10 @@
     {label: 'Portfolio', url: path('projects')},
     {label: author.fullname, active: true}
 ] %}
-{% set collection_filters = {
+{% set collection_filters = [ {
     collection: categories,
     showAllLabel: 'All categories'
-} %}
+} ] %}
 
 
 {# Collection of Projects =============================================== #}
