approve comments card on admin dashboard

--- a/templates/_elements/portfolio-collection-item.html.twig
+++ b/templates/_elements/portfolio-collection-item.html.twig
@@ -22,7 +22,7 @@
             }
 #}
     {% set zoomIcon = 'icon-line-zoom-in' %}
-    {% set showZoomIcon = true %}
+    {% set showZoomIcon = false %}
     {% set viewProjectIcon = 'icon-line-eye' %}
     {% set overlayAnimation = 'fadeIn' %}
     {% set iconAnimationIn = 'fadeInDownSmall' %}
