--- a/templates/_elements/projects-carousel.html.twig
+++ b/templates/_elements/projects-carousel.html.twig
@@ -16,7 +16,7 @@
 
     {% set showCategories = false %}
     {% set zoomIcon = 'icon-line-zoom-in' %}
-    {% set showZoomIcon = true %}
+    {% set showZoomIcon = false %}
     {% set viewProjectIcon = 'icon-line-eye' %}
     {% set defaultThumbnail = 'placeholder.png' %}
 
