--- a/templates/_sections/home/flip-cards.html.twig
+++ b/templates/_sections/home/flip-cards.html.twig
@@ -13,7 +13,7 @@
             } %}
 
             <div class="col-lg-7">
-                <div class="row">
+                <div class="row mt-5">
 
                     {% for card in cards %}
 
@@ -23,16 +23,15 @@
                             <div class="flip-card">
                                 <div class="flip-card-front no-after">
                                     <div class="flip-card-inner">
-                                            {% if card.icon is defined %}
-                                                <div class="mb-2">
-                                                    <i class="{{ card.icon }}"></i>
-                                                </div>
-                                            {% endif %}
-                                            <div class="fbox-content">
-                                                <h4>{{ card.title }}</h4>
-                                                <p class="text-muted fw-medium">{{ card.contentFront }}</p>
+                                        {% if card.icon is defined %}
+                                            <div class="mb-2">
+                                                <i class="{{ card.icon }}"></i>
                                             </div>
-
+                                        {% endif %}
+                                        <div class="fbox-content">
+                                            <h4>{{ card.title }}</h4>
+                                            <p class="text-muted fw-medium">{{ card.contentFront }}</p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="flip-card-back" style="background-image: url('{{ card.imgBack }}')">
